spacing fixed

--- a/src/components/Content.module.css
+++ b/src/components/Content.module.css
@@ -1,81 +1,81 @@
 .contentMain {
-  background-color: transparent;
-  width: 100%;
-  height: 100%;
-  position: fixed;
-  display: flex;
-  justify-content: flex-start;
-  align-items: flex-end;
-  overflow: hidden;
-  padding-left: 5rem;
-  padding-right: 5rem;
+    background-color: transparent;
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-end;
+    overflow: hidden;
+    padding-left: 5rem;
+    padding-right: 5rem;
 }
 
 .contentContainer {
-  display: flex;
-  align-items: left;
-  justify-content: flex-start;
-  flex-direction: column;
-  width: 70vw;
-  height: 70vh;
-  position: relative;
-  overflow: hidden;
+    display: flex;
+    align-items: left;
+    justify-content: flex-start;
+    flex-direction: column;
+    width: 70vw;
+    height: 70vh;
+    position: relative;
+    overflow: hidden;
 }
 
 .sectionTitle {
-  top: 0;
-  position: relative;
-  flex-shrink: 0;
-  margin: 0;
+    top: 0;
+    position: relative;
+    flex-shrink: 0;
+    margin: 0;
 }
 
 .sectionBody {
-  padding-left: 5rem;
-  display: flex;
-  flex-direction: column;
-  justify-content: start;
-  align-items: flex-start;
-  position: relative;
-  min-height: 400px;
-  max-width: 100%;
-  box-sizing: border-box;
-  overflow-y: auto;
-  scrollbar-width: none;
-  -ms-overflow-style: none;
+    padding-left: 2rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    align-items: flex-start;
+    position: relative;
+    min-height: 400px;
+    max-width: 100%;
+    box-sizing: border-box;
+    overflow-y: auto;
+    scrollbar-width: none;
+    -ms-overflow-style: none;
 }
 
 .sectionBody::-webkit-scrollbar {
-  display: none;
+    display: none;
 }
 
 @media screen and (max-width: 900px) {
-  .contentContainer {
-    width: 80vw;
-    height: 90vh;
-  }
+    .contentContainer {
+        width: 80vw;
+        height: 90vh;
+    }
 
-  .sectionBody {
-    height: 75vh;
-    min-height: 500px;
-  }
+    .sectionBody {
+        height: 75vh;
+        min-height: 500px;
+    }
 }
 
 @media (pointer: none), (pointer: coarse), (hover: none) {
-  .contentMain {
-    padding-left: 4rem;
-    padding-right: 3rem;
-  }
+    .contentMain {
+        padding-left: 4rem;
+        padding-right: 3rem;
+    }
 
-  .contentContainer {
-    width: 90vw;
-    height: 85vh;
-    max-height: 85vh;
-  }
+    .contentContainer {
+        width: 90vw;
+        height: 85vh;
+        max-height: 85vh;
+    }
 
-  .sectionBody {
-    height: 70vh;
-    max-height: 70vh;
-    min-height: unset;
-    overflow-y: auto;
-  }
+    .sectionBody {
+        height: 70vh;
+        max-height: 70vh;
+        min-height: unset;
+        overflow-y: auto;
+    }
 }
