--- a/src/routes/index.module.css
+++ b/src/routes/index.module.css
@@ -1,6 +1,10 @@
 .subtext,
 .subtext * {
-  font-size: 2vmin;
+  font-size: 1.5vmin;
+}
+
+.tightTitle {
+  margin-bottom: -3vmin;
 }
 
 @media screen and (max-width: 900px) {
